--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
   <meta charset="UTF-8" />
   <title>Love Forever</title>
@@ -8,6 +9,7 @@
     /* --- Base page --- */
     body {
       background: #000;
+      width: 100vw;
       height: 100vh;
       margin: 0;
       overflow: hidden;
@@ -31,31 +33,71 @@
       font-size: 13px;
       user-select: none;
     }
-    .quick-link:nth-of-type(1) { top: 10%; }  /* Create */
-    .quick-link:nth-of-type(2) { top: 4%;  z-index: 998; }  /* More */
-    .quick-link:nth-of-type(3) { top: 16%; z-index: 997; }  /* Source Code */
-    .quick-link:nth-of-type(4) { top: 22%; z-index: 996; }  /* Gift */
+
+    .quick-link:nth-of-type(1) {
+      top: 10%;
+    }
+
+    /* Create */
+    .quick-link:nth-of-type(2) {
+      top: 4%;
+      z-index: 998;
+    }
+
+    /* More */
+    .quick-link:nth-of-type(3) {
+      top: 16%;
+      z-index: 997;
+    }
+
+    /* Source Code */
+    .quick-link:nth-of-type(4) {
+      top: 22%;
+      z-index: 996;
+    }
+
+    /* Gift */
 
     /* --- Love words --- */
+   #ui {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  }
+
+  #center {
+  position: absolute;
+  top: 35%;
+  left: 15%;
+  transform: translate(-50%, -50%) scale(1.1);
+  transform-origin: center;
+  width: 450px;
+  height: 450px;
+  } 
+
     #ui .love {
       position: absolute;
       top: 50%;
       left: 50%;
-      margin: -225px 0 0 -225px;
+      transform: translate(-50%, -50%) scale(0.7);
+      transform-origin: center;
+      /* margin: -225px 0 0 -225px; */
       /* per-item delay  */
       --i: 1;
     }
+
     #ui .love:last-child .love_word {
       color: #fff;
       font-size: 2rem;
       text-shadow: 0 0 10px #ea80b0;
     }
+
     /* Make the last item match the others */
-#ui .love:last-child .love_word {
-  color: #ea80b0;
-  font-size: 1.4rem;
-  text-shadow: 0 0 10px #fff;
-}
+    #ui .love:last-child .love_word {
+      color: #ea80b0;
+      font-size: 1.4rem;
+      text-shadow: 0 0 10px #fff;
+    }
 
     #ui .love_word {
       color: #ea80b0;
@@ -65,10 +107,12 @@
       letter-spacing: 2px;
       white-space: nowrap;
     }
+
     #ui .love_horizontal {
       animation: horizontal 10000ms infinite alternate ease-in-out;
       animation-delay: calc(var(--i) * -300ms);
     }
+
     #ui .love_vertical {
       animation: vertical 20000ms infinite linear;
       animation-delay: calc(var(--i) * -300ms);
@@ -76,66 +120,141 @@
 
     /* --- Animations --- */
     @keyframes horizontal {
-      from { transform: translateX(0px); }
-      to   { transform: translateX(450px); }
+      from {
+        transform: translateX(0px);
+      }
+
+      to {
+        transform: translateX(450px);
+      }
     }
+
     @keyframes vertical {
-      0%   { transform: translateY(180px); }
-      10%  { transform: translateY(45px); }
-      15%  { transform: translateY(4.5px); }
-      18%  { transform: translateY(0px); }
-      20%  { transform: translateY(4.5px); }
-      22%  { transform: translateY(34.61538px); }
-      24%  { transform: translateY(64.28571px); }
-      25%  { transform: translateY(112.5px); }
-      26%  { transform: translateY(64.28571px); }
-      28%  { transform: translateY(34.61538px); }
-      30%  { transform: translateY(4.5px); }
-      32%  { transform: translateY(0px); }
-      35%  { transform: translateY(4.5px); }
-      40%  { transform: translateY(45px); }
-      50%  { transform: translateY(180px); }
-      71%  { transform: translateY(428.57143px); }
-      72.5%{ transform: translateY(441.17647px); }
-      75%  { transform: translateY(450px); }
-      77.5%{ transform: translateY(441.17647px); }
-      79%  { transform: translateY(428.57143px); }
-      100% { transform: translateY(180px); }
+      0% {
+        transform: translateY(180px);
+      }
+
+      10% {
+        transform: translateY(45px);
+      }
+
+      15% {
+        transform: translateY(4.5px);
+      }
+
+      18% {
+        transform: translateY(0px);
+      }
+
+      20% {
+        transform: translateY(4.5px);
+      }
+
+      22% {
+        transform: translateY(34.61538px);
+      }
+
+      24% {
+        transform: translateY(64.28571px);
+      }
+
+      25% {
+        transform: translateY(112.5px);
+      }
+
+      26% {
+        transform: translateY(64.28571px);
+      }
+
+      28% {
+        transform: translateY(34.61538px);
+      }
+
+      30% {
+        transform: translateY(4.5px);
+      }
+
+      32% {
+        transform: translateY(0px);
+      }
+
+      35% {
+        transform: translateY(4.5px);
+      }
+
+      40% {
+        transform: translateY(45px);
+      }
+
+      50% {
+        transform: translateY(180px);
+      }
+
+      71% {
+        transform: translateY(428.57143px);
+      }
+
+      72.5% {
+        transform: translateY(441.17647px);
+      }
+
+      75% {
+        transform: translateY(450px);
+      }
+
+      77.5% {
+        transform: translateY(441.17647px);
+      }
+
+      79% {
+        transform: translateY(428.57143px);
+      }
+
+      100% {
+        transform: translateY(180px);
+      }
     }
   </style>
 </head>
+
 <body>
-  
-  <a href="https://memoryiit.com/16c19b6a-Melhor-presente-da-minha-vida?utm_source=direto&sck=1763904188958_17639042706542" class="quick-link" title="Create">❤️</a>
-   <a href="https://www.youtube.com/watch?v=9eioeZ1kEy0" class="quick-link" title="Create">Music</a>
 
-  <div id="ui"></div>
+  <a href="https://memoryiit.com/16c19b6a-Melhor-presente-da-minha-vida?utm_source=direto&sck=1763904188958_17639042706542"
+    class="quick-link" title="Create">❤️</a>
+  <a href="https://www.youtube.com/watch?v=9eioeZ1kEy0" class="quick-link" title="Create">Music</a>
 
-  <script>
-    // Create N floating “I love you” items (was multilingual; now all English)
-    const N = 100;    
-    const ui = document.getElementById('ui');
+  <div id="ui">
+    <div id="center">
+      <script>
+        // Create N floating “I love you” items (was multilingual; now all English)
+        const N = 100;
+        const ui = document.getElementById('center');
 
-    for (let i = 1; i <= N; i++) {
-      const love = document.createElement('div');
-      love.className = 'love';
-      love.style.setProperty('--i', i);
+        for (let i = 1; i <= N; i++) {
+          const love = document.createElement('div');
+          love.className = 'love';
+          love.style.setProperty('--i', i);
 
-      const h = document.createElement('div');
-      h.className = 'love_horizontal';
+          const h = document.createElement('div');
+          h.className = 'love_horizontal';
 
-      const v = document.createElement('div');
-      v.className = 'love_vertical';
+          const v = document.createElement('div');
+          v.className = 'love_vertical';
 
-      const word = document.createElement('div');
-      word.className = 'love_word';
-      word.textContent = 'i love u vidão';
+          const word = document.createElement('div');
+          word.className = 'love_word';
+          word.textContent = 'i love u vidão';
 
-      v.appendChild(word);
-      h.appendChild(v);
-      love.appendChild(h);
-      ui.appendChild(love);
-    }
-  </script>
+          v.appendChild(word);
+          h.appendChild(v);
+          love.appendChild(h);
+          ui.appendChild(love);
+        }
+      </script>
+    </div>
+  </div>
+
+
 </body>
+
 </html>
